# nycatech

./: .clang-format  .gitignore  CMakeLists.txt  main.cc
assets/: example.vert
core/: CMakeLists.txt  client.cc  component.cc  component.h  entity.cc  entity.h  server.cc  server.h  system.cc  system.h  types.h  world.cc  world.h
core/lib/: assert.h  pair.h  types.h  uniform.h  vec.cc  vec.h  vector.h
core/math/: matrix.h  vec.h
core/renderer/: device.cc  device.h  gl_renderer.cc  gl_renderer.h  obj_model.cc  obj_model.h  physical_device.cc  physical_device.h  render_pipeline.cc  render_pipeline.h  renderer.h  shader.cc  shader.h  surface.cc  surface.h  swapchain.cc  swapchain.h  vulkan_instance.cc  vulkan_instance.h  vulkan_queue.cc  vulkan_queue.h  vulkan_renderer.cc  vulkan_renderer.h
protos/: CMakeLists.txt  benchmark.proto
shaders/: CMakeLists.txt  example.frag
